2010-01-26  Lyon Chen  <liachen@rim.com>

Reviewed by Maciej Stachowiak.

        Opcode.h use const void* for Opcode cause error #1211 for RVCT compiler
        https://bugs.webkit.org/show_bug.cgi?id=33902

        * bytecode/Opcode.h:

Canonical link: https://commits.webkit.org/45274@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53891 268f45cc-cd09-0410-ab3c-d52691b4dbfc